--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "11.0.0",
+    "nodemailer": "^6.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
