--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/node": "^1.11.1",
     "axios": "^0.21.1",
     "next": "11.0.0",
     "nodemailer": "^6.6.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.10",
     "eslint": "7.28.0",
